// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-boat-tile Should dispatch event onClick card 1`] = `
<c-boat-tile
  __lwc_scope_token__=""
>
  #shadow-root(open)
    <div
      __lwc_scope_token__=""
      class="tile-wrapper selected"
    >
      <div
        __lwc_scope_token__=""
        class="tile"
        style="background-image: url(http://www.example.com/boat.jpg);"
      />
      <div
        __lwc_scope_token__=""
        class="lower-third"
      >
        <h1
          __lwc_scope_token__=""
          class="slds-truncate slds-text-heading_medium"
        >
          Boaty McBoatFace
        </h1>
        <h2
          __lwc_scope_token__=""
          class="slds-truncate slds-text-heading_small"
        >
          Contact Name
        </h2>
        <lightning-formatted-number
          __lwc_scope_token__=""
        >
          #shadow-root(open)
        </lightning-formatted-number>
        <div
          __lwc_scope_token__=""
          class="slds-text-body_small"
        >
          20
        </div>
        <div
          __lwc_scope_token__=""
          class="slds-text-body_small"
        >
           type
        </div>
      </div>
    </div>
</c-boat-tile>
`;

exports[`c-boat-tile TODO: test case generated by CLI command, please fill in test logic 1`] = `
<c-boat-tile
  __lwc_scope_token__=""
>
  #shadow-root(open)
    <div
      __lwc_scope_token__=""
      class="tile-wrapper"
    >
      <div
        __lwc_scope_token__=""
        class="tile"
        style="background-image: url(http://www.example.com/boat.jpg);"
      />
      <div
        __lwc_scope_token__=""
        class="lower-third"
      >
        <h1
          __lwc_scope_token__=""
          class="slds-truncate slds-text-heading_medium"
        >
          Boaty McBoatFace
        </h1>
        <h2
          __lwc_scope_token__=""
          class="slds-truncate slds-text-heading_small"
        >
          Contact Name
        </h2>
        <lightning-formatted-number
          __lwc_scope_token__=""
        >
          #shadow-root(open)
        </lightning-formatted-number>
        <div
          __lwc_scope_token__=""
          class="slds-text-body_small"
        >
          20
        </div>
        <div
          __lwc_scope_token__=""
          class="slds-text-body_small"
        >
           type
        </div>
      </div>
    </div>
</c-boat-tile>
`;
